--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body{
     height: 90px;
     border-radius: 50%;
     margin-bottom: 15px;
+    object-fit: cover;
 }
 .profile h2{
     color: #fff;
@@ -48,4 +49,5 @@ body{
     margin: 8px 0;
     transition: background 0.3s;
     font-weight: 500;
+
 }
